k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: customers
spec:
  to:
    kind: Service
    name: customers
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
